changed format of folders

--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Home</title>
-<link rel="stylesheet" href="style.css">
+<title>Resources In Khayelitsha</title>
+<link rel="stylesheet" href="./resources/css/index.css">
 </head>
 <body>
-    <h1>All About Khayelitsha</h1>
-    <ul>
-        <li><a href="tabs/health.html">Health</a></li>
+	<header>
+  	<h1>Resources In Khayelitsha</h1>
+		<nav>
+    	<ul>
+      	<li><a href="tabs/health.html">Health</a></li>
         <li><a href="">Education</a></li>
-    </ul>
+      </ul>
+    </nav>
+  </header>
 </body>
 </html>
