--- a/tabs/health.html
+++ b/tabs/health.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <title>Health</title>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Doctors available</h1>
+	<h1>Doctors available</h1>
 </body>
 </html>
