--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Resources In Khayelitsha</title>
-<link rel="stylesheet" href="./resources/css/index.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Resources In Khayelitsha</title>
+  <link rel="stylesheet" href="./resources/css/index.css">
 </head>
 <body>
-	<header>
+  <header>
   	<h1>Resources In Khayelitsha</h1>
 		<nav>
     	<ul>
